# tudatpy

./: .authors.yml  .bumpversion.cfg  .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  .multidoc.cfg  .readthedocs.yml  AUTHORS  CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.old  CMakeLists_tudat.txt  CMakePresets.json  Jamroot.jam  LICENSE  README.md  README.rst  _CMakeLists.txt  __init__.py  __pyproject.toml  _version.py.in  addToTudat.sh  aerodynamic_coefficients.html  astro.html  build.py  build.sh  build_and_expose_kernel.sh  constants.html  environment-osx.yaml  environment.html  environment.yaml  environment.yml  ephemeris_demo.py  estimation.html  estimation_setup.html  expose_kernel_module.py  fundamentals.html  generate_stubs.py  (+26 more)
.conda/: bld.bat  (+5 more)
src/tudatpy/: CMakeLists.txt  CMakeLists.txt.old  _CMakeLists.txt  __init__.py  add_astro_to_kernel.cpp  add_constants_to_kernel.cpp  add_data_to_kernel.cpp  add_dynamics_to_kernel.cpp  add_estimation_to_kernel.cpp  add_exceptions_to_kernel.cpp  add_interface_to_kernel.cpp  add_math_to_kernel.cpp  add_trajectory_design_to_kernel.cpp  kernel.cpp
src/tudatpy/apps/: __init__.py
src/tudatpy/astro/: __init__.py  __init__.pyi  astro.cpp  astro.hpp  expose_astro.cpp  expose_astro.h
src/tudatpy/cli/: create_project2.py
src/tudatpy/constants/: __init__.py  constants.cpp  expose_constants.cpp  expose_constants.h  expose_constants.pyi
src/tudatpy/data/: __init__.py  __init__.pyi  _biases.py  _biases.pyi  _support.py  data.cpp  expose_data.cpp  expose_data.h  expose_data.pyi  horizons.py  mission_data_downloader.py  mpc.py  sbdb.py
src/tudatpy/db/: _base.py
src/tudatpy/dynamics/: __init__.py  expose_dynamics.cpp  expose_dynamics.h
src/tudatpy/estimation/: __init__.py  expose_estimation.cpp  expose_estimation.h
src/tudatpy/estimation_refactoring/: __init__.py  expose_estimation_refactoring.cpp  expose_estimation_refactoring.h
src/tudatpy/exceptions/: __init__.py  expose_exceptions.cpp  expose_exceptions.h
src/tudatpy/interface/: __init__.py  __init__.pyi  expose_interface.cpp  expose_interface.h  interface.cpp
src/tudatpy/io/: __init__.py  __init__.pyi  expose_io.cpp
src/tudatpy/math/: __init__.py  __init__.pyi  expose_math.cpp  expose_math.h  math.cpp  math.hpp
src/tudatpy/numerical_simulation/: __init__.py  __init__.pyi  expose_numerical_simulation.cpp  expose_numerical_simulation.h  expose_numerical_simulation.pyi  expose_numerical_simulation_estimator.cpp  expose_numerical_simulation_simulator.cpp  expose_numerical_simulation_variational.cpp  numerical_simulation.cpp  (+4 more)
third_parties/mcd/: CMakeLists.txt  test_mcd.F90  test_mcd.def
tudatpy/: .authors.yml  CMakeLists.txt  README.md  Untitled.ipynb  __init__.py  _layer_propagation_setup.py  _layer_simulation_setup.py  _version.py  _version.py.in  core.cpp  docstrings.cpp  elements.py  expose_aerodynamics.h  expose_basic_astrodynamics.cpp  expose_basic_astrodynamics.h  expose_constants.h  expose_ephemerides.cpp  expose_ephemerides.h  expose_ephemeris.cpp  expose_gravitation.cpp  expose_gravitation.h  expose_interpolators.h  expose_kernel_module.py  expose_numerical_integrators.h  expose_orbital_element_conversions.cpp  expose_orbital_element_conversions.h  expose_propagators.cpp  expose_propagators.h  expose_reference_frames.h  expose_root_finders.h  expose_simulation_setup.cpp  expose_simulation_setup.h  expose_spice_interface.cpp  expose_spice_interface.h  expose_unit_tests.h  horizons_ephemeris.py  io.py  prototype.py  rever.xsh  setup.py  (+9 more)
tudatpy/apps/: __init__.py  _single_satellite_propagator.py  _ssp.py  satellite_propagator.py
tudatpy/astro/: __init__.py
tudatpy/bodies/: _body.py  _default.py  _heirarchy.py
tudatpy/cli/: __init__.py  cli.py  create_project.py  create_project2.py  create_workspace.py
tudatpy/constants/: CMakeLists.txt  __init__.py  _import_all_kernel_members.py  celestial.cpp  physical.cpp
tudatpy/data/: __init__.py  _biases.py  _import_all_kernel_members.py  horizons.py  mission_data_downloader.py  mpc.py  nsdc.py  processTrk234.py  sbdb.py
tudatpy/db/: celestrak.json  tudat_space.json
tudatpy/docs/: Makefile
tudatpy/examples/: ephemeris_demo.ipynb
tudatpy/exceptions/: __init__.py  _import_all_kernel_members.py
tudatpy/html/: .buildinfo  acceleration.html  data.html  integrator.html  interface.html  interpolators.html  propagation_setup.html  propagator.html  rotation_model.html  searchindex.js  shape_based_thrust.html  time_conversion.html  torque.html  transfer_trajectory.html  two_body_dynamics.html
tudatpy/interface/: __init__.py
tudatpy/io/: __init__.py  _support.py
tudatpy/kernel/: core.cpp  deprecationWarnings.cpp  deprecationWarnings.h  docstrings.cpp  docstrings.h  expose_aerodynamics.cpp  expose_aerodynamics.h  expose_astro.cpp  expose_astro.h  expose_basic_astrodynamics.h  expose_bodies.cpp  expose_bodies.h  expose_constants.cpp  expose_constants.h  expose_data.cpp  expose_data.h  expose_ephemerides.cpp  expose_ephemerides.h  expose_example.cpp  expose_example.h  expose_exceptions.cpp  expose_gravitation.h  expose_interface.cpp  expose_interface.h  expose_interpolators.h  expose_io.cpp  expose_io.h  expose_low_thrust.cpp  expose_low_thrust.h  expose_math.cpp  expose_math.h  expose_numerical_integrators.cpp  expose_numerical_simulation.cpp  expose_numerical_simulation.h  expose_numerical_simulation_direct.cpp  expose_numerical_simulation_direct2.cpp  expose_numerical_simulation_direct3.cpp  expose_numerical_simulation_estimator.cpp  expose_numerical_simulation_simulator.cpp  expose_numerical_simulation_variational.cpp  (+22 more)
tudatpy/math/: __init__.py
tudatpy/mission_design/: __init__.py
tudatpy/numerical_simulation/: __init__.py  _import_all_kernel_members.py
tudatpy/plotting/: __init__.py  _astrodynamics.py  _ground_track.py  _helpers.py
tudatpy/simulation/: CMakeLists.txt
tudatpy/spice/: CMakeLists.txt  __init__.py  _spice.cpp
tudatpy/trajectory_design/: __init__.py
tudatpy/tudatpy/: CMakeLists.txt
tudatpy/util/: __init__.py  _semantic_dv_retrieval.py  _support.py
(+7944 files in other folders)
