[build-system]
requires = [
    "scikit-build-core",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "tudatpy"
dynamic = [
    "version"
]
authors = [
    { name = "The TudatPy team" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy<2.0.0",
    "scipy",
    "mypy",
    "pytest",
    "pandas",
    "matplotlib",
    "tqdm",
    "astropy",
    "astroquery",
    "astropy-healpix",
    "pybind11-stubgen"
]

[project.urls]
Documentation = "https://docs.tudat.space/en/latest/"
Homepage = "https://docs.tudat.space/en/latest/"
Repository = "https://github.com/tudat-team/tudatpy/tree/develop"

[tool.pytest.ini.options]
testpaths = [
    "tests"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/tudatpy/__init__.py"

[tool.scikit-build]
cmake.args = [
    "-DCMAKE_CXX_STANDARD=14",
    "-DBoost_NO_BOOST_CMAKE=ON",
    "-DCMAKE_BUILD_TYPE=Release",
    "-DTUDATPY_CONDA_BUILD=on",
    "-D_GLIBCXX_USE_CXX11_ABI=1"
]
wheel.packages = [
    "src/tudatpy",
    "src/tudatpy-stubs"
]

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_PREFIX = { env = "CONDA_PREFIX", default = "" }
CMAKE_PREFIX_PATH = { env = "CONDA_PREFIX", default = "" }
