[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "cibuildwheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "tudatpy"
dynamic = [
    "version"
]
authors = [
    { name = "The TudatPy team" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26,<2.0.0",
    "scipy",
    "mypy",
    "pytest",
    "pandas",
    "matplotlib",
    "tqdm",
    "astropy",
    "astroquery",
    "astropy-healpix"
]

[project.urls]
Documentation = "https://docs.tudat.space/en/latest/"
Homepage = "https://docs.tudat.space/en/latest/"
Repository = "https://github.com/tudat-team/tudatpy/tree/develop"

[tool.pytest.ini.options]
testpaths = [
    "tests"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/tudatpy/__init__.py"

[tool.scikit-build]
cmake.version = ">=3.25"
cmake.verbose = true
cmake.build-type = "Release"
build.tool-args = [
    "-j4"
]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "14"
Boost_NO_BOOST_CMAKE = "ON"
TUDATPY_CONDA_BUILD = "ON"
_GLIBCXX_USE_CXX11_ABI = "1"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
